# realtime-tigo-monitor

./: .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml
.claude/: .smbdeleteAAA2dba437
.github/: FUNDING.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  mqtt_client.py  panel_service.py  websocket_manager.py
backend/tests/: test_panel_service.py
config/: layout.example.yaml  panel_mapping.json  panels.example.yaml  system.example.yaml
dashboard/: docker-compose.example.yml  docker-compose.test.yml  docker-compose.yml
dashboard/backend/: .env.example  Dockerfile.test  pyproject.toml  requirements-dev.txt  requirements.txt
dashboard/frontend/: Dockerfile  nginx.conf  package.json
docs/: DEPLOYMENT.md  TODOs.md  TROUBLESHOOTING.md  record-gif-supplement.md  taptap-docker-testing.md  taptap-state-file-bootstrapping.md  worktree-support.md
docs/archive/: panel_mapping.json.legacy
docs/gif-scripts/: README.md  (+5 more)
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts
scripts/: create_test_backup.py  migrate_positions.py  test_restore_positions.py  verify_backup_positions.py
tigo-mqtt/: .gitignore  Dockerfile  config-primary.ini  config-secondary.ini  config-template.ini  convert_infra_to_state.py  docker-compose.sample.yml  docker-compose.yml
tigo_docker/: .env.example  .gitignore  Dockerfile  capture-infrastructure.sh  config-primary.ini  config-secondary.ini  config-template.ini  docker-compose.yml  entrypoint.sh
(+132 files in other folders)
