[project]
name = "solar-tigo-viewer-backend"
version = "0.1.0"
description = "Backend for Solar Tigo Viewer"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
